[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.7.2"
axum-error = "0.2.0"
tower-http = { version = "0.5.0", features = ["cors"] }

tokio = { version = "1.35.1", features = ["full"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
